--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,5 @@
-{
-  "name": "Wrong Choice",
-  "short_name": "WrongChoice",
-  "start_url": "/index.html",
-  "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#00c2ff",
-  "icons": [
-    {
-      "src": "icons/192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
-}
+"scope": "/wrong-choice/",
+"start_url": "/wrong-choice/",
+
+"related_applications": [],
+"prefer_related_applications": false,
