--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,44 @@
-"scope": "/wrong-choice/",
-"start_url": "/wrong-choice/",
-
-"related_applications": [],
-"prefer_related_applications": false,
+{
+  "name": "Wrong Choice",
+  "short_name": "WrongChoice",
+  "start_url": "/wrong-choice/",
+  "scope": "/wrong-choice/",
+  "display": "standalone",
+  "orientation": "portrait",
+  "id": "/wrong-choice/",
+  "description": "A fast-paced category guessing game powered by wrong choices!",
+  "launch_handler": {
+    "client_mode": "auto"
+  },
+  "related_applications": [],
+  "prefer_related_applications": false,
+  "icons": [
+    {
+      "src": "images/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "images/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "images/screenshot1.png",
+      "type": "image/png",
+      "sizes": "720x1280"
+    },
+    {
+      "src": "images/screenshot2.png",
+      "type": "image/png",
+      "sizes": "720x1280"
+    },
+    {
+      "src": "images/screenshot3.png",
+      "type": "image/png",
+      "sizes": "720x1280"
+    }
+  ]
+}
