--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,46 @@
-"name": "Wrong Choice",
-"short_name": "WrongChoice",
-"start_url": "/wrong-choice/",
-"scope": "/wrong-choice/",
-"display": "standalone",
-"orientation": "portrait",
-"id": "/wrong-choice/",
-"description": "A fast-paced guessing game powered by wrong choices!",
-"icons": [
-  {
-    "src": "images/icon-192.png",
-    "sizes": "192x192",
-    "type": "image/png"
+{
+  "name": "Wrong Choice",
+  "short_name": "WrongChoice",
+  "id": "/wrong-choice/",
+  "start_url": "/wrong-choice/",
+  "scope": "/wrong-choice/",
+  "display": "standalone",
+  "orientation": "portrait",
+  "description": "A fast-paced guessing game powered by wrong choices!",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "launch_handler": {
+    "client_mode": "auto"
   },
-  {
-    "src": "images/icon-512.png",
-    "sizes": "512x512",
-    "type": "image/png"
-  }
-]
+  "prefer_related_applications": false,
+  "related_applications": [],
+  "icons": [
+    {
+      "src": "icons/icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "icons/screenshot1.png",
+      "sizes": "720x1280",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/screenshot2.png",
+      "sizes": "720x1280",
+      "type": "image/png"
+    },
+    {
+      "src": "icons/screenshot3.png",
+      "sizes": "720x1280",
+      "type": "image/png"
+    }
+  ]
+}
